--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ section:nth-child(1){
 }
 
 section:nth-child(2){
-    background-color: pink;
+    background-color: forestgreen;
 }
 
 section:nth-child(3){
@@ -33,5 +33,5 @@ section:nth-child(5){
 }
 
 section:nth-child(6){
-    background-color:forestgreen;
+    background-color:darkgoldenrod;
 }
